doc: add credentials

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "aclear colour theme",
   "description": "A clean and modern dark and light VScode theme with soft fresh colours.",
   "version": "0.1.0",
-  "publisher": "Andrew D'Amario",
+  "publisher": "andrewaclear",
   "license": "MIT",
   "keywords": [
     "theme",
